[gd_scene load_steps=10 format=3 uid="uid://ckv56n5m4p0yx"]

[ext_resource type="Script" path="res://Scripts/habitat_tile.gd" id="1_jyij7"]
[ext_resource type="Texture2D" uid="uid://nnito4uvyesr" path="res://Sprites/chameleon.png" id="2_qiuga"]
[ext_resource type="PackedScene" uid="uid://c1jki5oeny2wu" path="res://Scenes/animal_ui.tscn" id="3_aral8"]
[ext_resource type="PackedScene" uid="uid://bcf1skxk6vull" path="res://Scenes/animal_token.tscn" id="4_cms7m"]
[ext_resource type="Script" path="res://Scripts/3d_control.gd" id="4_r1vh5"]
[ext_resource type="PackedScene" uid="uid://dgxmdj3gfdokd" path="res://Scenes/tile_info.tscn" id="6_3tq2r"]

[sub_resource type="Gradient" id="Gradient_uruqa"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j435c"]
gradient = SubResource("Gradient_uruqa")
width = 58
fill_from = Vector2(1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tp1pi"]
shadow_color = Color(0, 0, 0, 0.607843)

[node name="HabitatTile" type="Node3D"]
script = ExtResource("1_jyij7")

[node name="AnimalIcon_old" type="Sprite3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 0.1, 0)
visible = false
billboard = 1
no_depth_test = true
texture = ExtResource("2_qiuga")

[node name="Highlight0" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0.433, 0.38, 0.25)
visible = false
texture = SubResource("GradientTexture2D_j435c")

[node name="Highlight1" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.38, 0.5)
visible = false
texture = SubResource("GradientTexture2D_j435c")

[node name="Highlight2" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, -0.433, 0.38, 0.25)
visible = false
texture = SubResource("GradientTexture2D_j435c")

[node name="Highlight3" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -0.433, 0.38, -0.25)
visible = false
texture = SubResource("GradientTexture2D_j435c")

[node name="Highlight4" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.38, -0.5)
visible = false
texture = SubResource("GradientTexture2D_j435c")

[node name="Highlight5" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 0.433, 0.38, -0.25)
visible = false
texture = SubResource("GradientTexture2D_j435c")

[node name="Highlight6" type="Sprite3D" parent="."]
transform = Transform3D(0.866, 0, -0.866025, 0, 1, 0, 1.49996, 0, 0.5, 0, 0.38, 0)
visible = false
texture = SubResource("GradientTexture2D_j435c")

[node name="DebugUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -19.0
offset_top = -23.0
offset_right = 21.0
offset_bottom = 17.0
mouse_filter = 2
script = ExtResource("4_r1vh5")

[node name="Label" type="Label" parent="DebugUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -11.5
offset_right = 27.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "testing"
label_settings = SubResource("LabelSettings_tp1pi")
horizontal_alignment = 1

[node name="AnimalToken0" parent="." instance=ExtResource("4_cms7m")]
visible = false

[node name="AnimalUI" parent="AnimalToken0" instance=ExtResource("3_aral8")]
scale = Vector2(1, 1)

[node name="AnimalToken1" parent="." instance=ExtResource("4_cms7m")]
visible = false

[node name="AnimalUI" parent="AnimalToken1" instance=ExtResource("3_aral8")]
scale = Vector2(1, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("4_r1vh5")

[node name="TileInfo" parent="Control" instance=ExtResource("6_3tq2r")]
visible = false
layout_mode = 1
offset_top = -132.0
offset_bottom = 0.0

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
depth = 0.0
polygon = PackedVector2Array(-0.25, -0.433, 0.25, -0.433, 0.5, 0, 0.25, 0.433, -0.25, 0.433, -0.5, 0)

[connection signal="mouse_entered" from="Area3D" to="." method="_on_collider_full_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_collider_full_mouse_exited"]
